--- a/IDPS_intro.ipynb
+++ b/IDPS_intro.ipynb
@@ -207,318 +207,11 @@
     "import matplotlib.pyplot as plt\n",
     "plt.imshow(image_0)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'isx' has no attribute 'examples'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-24-ec098f347536>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0misx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexamples\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcnmfe\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'isx' has no attribute 'examples'"
-     ]
-    }
-   ],
-   "source": [
-    "isx.examples.cnmfe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import isx.examples.cnmfe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'__name__': 'isx.examples.cnmfe',\n",
-       " '__doc__': '\\n    This module contains an example for running CNMFe through CaImAn.\\n',\n",
-       " '__package__': 'isx.examples',\n",
-       " '__loader__': <_frozen_importlib_external.SourceFileLoader at 0x1c6803f61c8>,\n",
-       " '__spec__': ModuleSpec(name='isx.examples.cnmfe', loader=<_frozen_importlib_external.SourceFileLoader object at 0x000001C6803F61C8>, origin='C:\\\\Program Files\\\\Inscopix\\\\Data Processing\\\\isx\\\\examples\\\\cnmfe.py'),\n",
-       " '__file__': 'C:\\\\Program Files\\\\Inscopix\\\\Data Processing\\\\isx\\\\examples\\\\cnmfe.py',\n",
-       " '__cached__': 'C:\\\\Program Files\\\\Inscopix\\\\Data Processing\\\\isx\\\\examples\\\\__pycache__\\\\cnmfe.cpython-37.pyc',\n",
-       " '__builtins__': {'__name__': 'builtins',\n",
-       "  '__doc__': \"Built-in functions, exceptions, and other objects.\\n\\nNoteworthy: None is the `nil' object; Ellipsis represents `...' in slices.\",\n",
-       "  '__package__': '',\n",
-       "  '__loader__': _frozen_importlib.BuiltinImporter,\n",
-       "  '__spec__': ModuleSpec(name='builtins', loader=<class '_frozen_importlib.BuiltinImporter'>),\n",
-       "  '__build_class__': <function __build_class__>,\n",
-       "  '__import__': <function __import__>,\n",
-       "  'abs': <function abs(x, /)>,\n",
-       "  'all': <function all(iterable, /)>,\n",
-       "  'any': <function any(iterable, /)>,\n",
-       "  'ascii': <function ascii(obj, /)>,\n",
-       "  'bin': <function bin(number, /)>,\n",
-       "  'breakpoint': <function breakpoint>,\n",
-       "  'callable': <function callable(obj, /)>,\n",
-       "  'chr': <function chr(i, /)>,\n",
-       "  'compile': <function compile(source, filename, mode, flags=0, dont_inherit=False, optimize=-1)>,\n",
-       "  'delattr': <function delattr(obj, name, /)>,\n",
-       "  'dir': <function dir>,\n",
-       "  'divmod': <function divmod(x, y, /)>,\n",
-       "  'eval': <function eval(source, globals=None, locals=None, /)>,\n",
-       "  'exec': <function exec(source, globals=None, locals=None, /)>,\n",
-       "  'format': <function format(value, format_spec='', /)>,\n",
-       "  'getattr': <function getattr>,\n",
-       "  'globals': <function globals()>,\n",
-       "  'hasattr': <function hasattr(obj, name, /)>,\n",
-       "  'hash': <function hash(obj, /)>,\n",
-       "  'hex': <function hex(number, /)>,\n",
-       "  'id': <function id(obj, /)>,\n",
-       "  'input': <bound method Kernel.raw_input of <ipykernel.ipkernel.IPythonKernel object at 0x000001C664EBA088>>,\n",
-       "  'isinstance': <function isinstance(obj, class_or_tuple, /)>,\n",
-       "  'issubclass': <function issubclass(cls, class_or_tuple, /)>,\n",
-       "  'iter': <function iter>,\n",
-       "  'len': <function len(obj, /)>,\n",
-       "  'locals': <function locals()>,\n",
-       "  'max': <function max>,\n",
-       "  'min': <function min>,\n",
-       "  'next': <function next>,\n",
-       "  'oct': <function oct(number, /)>,\n",
-       "  'ord': <function ord(c, /)>,\n",
-       "  'pow': <function pow(x, y, z=None, /)>,\n",
-       "  'print': <function print>,\n",
-       "  'repr': <function repr(obj, /)>,\n",
-       "  'round': <function round(number, ndigits=None)>,\n",
-       "  'setattr': <function setattr(obj, name, value, /)>,\n",
-       "  'sorted': <function sorted(iterable, /, *, key=None, reverse=False)>,\n",
-       "  'sum': <function sum(iterable, start=0, /)>,\n",
-       "  'vars': <function vars>,\n",
-       "  'None': None,\n",
-       "  'Ellipsis': Ellipsis,\n",
-       "  'NotImplemented': NotImplemented,\n",
-       "  'False': False,\n",
-       "  'True': True,\n",
-       "  'bool': bool,\n",
-       "  'memoryview': memoryview,\n",
-       "  'bytearray': bytearray,\n",
-       "  'bytes': bytes,\n",
-       "  'classmethod': classmethod,\n",
-       "  'complex': complex,\n",
-       "  'dict': dict,\n",
-       "  'enumerate': enumerate,\n",
-       "  'filter': filter,\n",
-       "  'float': float,\n",
-       "  'frozenset': frozenset,\n",
-       "  'property': property,\n",
-       "  'int': int,\n",
-       "  'list': list,\n",
-       "  'map': map,\n",
-       "  'object': object,\n",
-       "  'range': range,\n",
-       "  'reversed': reversed,\n",
-       "  'set': set,\n",
-       "  'slice': slice,\n",
-       "  'staticmethod': staticmethod,\n",
-       "  'str': str,\n",
-       "  'super': super,\n",
-       "  'tuple': tuple,\n",
-       "  'type': type,\n",
-       "  'zip': zip,\n",
-       "  '__debug__': True,\n",
-       "  'BaseException': BaseException,\n",
-       "  'Exception': Exception,\n",
-       "  'TypeError': TypeError,\n",
-       "  'StopAsyncIteration': StopAsyncIteration,\n",
-       "  'StopIteration': StopIteration,\n",
-       "  'GeneratorExit': GeneratorExit,\n",
-       "  'SystemExit': SystemExit,\n",
-       "  'KeyboardInterrupt': KeyboardInterrupt,\n",
-       "  'ImportError': ImportError,\n",
-       "  'ModuleNotFoundError': ModuleNotFoundError,\n",
-       "  'OSError': OSError,\n",
-       "  'EnvironmentError': OSError,\n",
-       "  'IOError': OSError,\n",
-       "  'WindowsError': OSError,\n",
-       "  'EOFError': EOFError,\n",
-       "  'RuntimeError': RuntimeError,\n",
-       "  'RecursionError': RecursionError,\n",
-       "  'NotImplementedError': NotImplementedError,\n",
-       "  'NameError': NameError,\n",
-       "  'UnboundLocalError': UnboundLocalError,\n",
-       "  'AttributeError': AttributeError,\n",
-       "  'SyntaxError': SyntaxError,\n",
-       "  'IndentationError': IndentationError,\n",
-       "  'TabError': TabError,\n",
-       "  'LookupError': LookupError,\n",
-       "  'IndexError': IndexError,\n",
-       "  'KeyError': KeyError,\n",
-       "  'ValueError': ValueError,\n",
-       "  'UnicodeError': UnicodeError,\n",
-       "  'UnicodeEncodeError': UnicodeEncodeError,\n",
-       "  'UnicodeDecodeError': UnicodeDecodeError,\n",
-       "  'UnicodeTranslateError': UnicodeTranslateError,\n",
-       "  'AssertionError': AssertionError,\n",
-       "  'ArithmeticError': ArithmeticError,\n",
-       "  'FloatingPointError': FloatingPointError,\n",
-       "  'OverflowError': OverflowError,\n",
-       "  'ZeroDivisionError': ZeroDivisionError,\n",
-       "  'SystemError': SystemError,\n",
-       "  'ReferenceError': ReferenceError,\n",
-       "  'MemoryError': MemoryError,\n",
-       "  'BufferError': BufferError,\n",
-       "  'Warning': Warning,\n",
-       "  'UserWarning': UserWarning,\n",
-       "  'DeprecationWarning': DeprecationWarning,\n",
-       "  'PendingDeprecationWarning': PendingDeprecationWarning,\n",
-       "  'SyntaxWarning': SyntaxWarning,\n",
-       "  'RuntimeWarning': RuntimeWarning,\n",
-       "  'FutureWarning': FutureWarning,\n",
-       "  'ImportWarning': ImportWarning,\n",
-       "  'UnicodeWarning': UnicodeWarning,\n",
-       "  'BytesWarning': BytesWarning,\n",
-       "  'ResourceWarning': ResourceWarning,\n",
-       "  'ConnectionError': ConnectionError,\n",
-       "  'BlockingIOError': BlockingIOError,\n",
-       "  'BrokenPipeError': BrokenPipeError,\n",
-       "  'ChildProcessError': ChildProcessError,\n",
-       "  'ConnectionAbortedError': ConnectionAbortedError,\n",
-       "  'ConnectionRefusedError': ConnectionRefusedError,\n",
-       "  'ConnectionResetError': ConnectionResetError,\n",
-       "  'FileExistsError': FileExistsError,\n",
-       "  'FileNotFoundError': FileNotFoundError,\n",
-       "  'IsADirectoryError': IsADirectoryError,\n",
-       "  'NotADirectoryError': NotADirectoryError,\n",
-       "  'InterruptedError': InterruptedError,\n",
-       "  'PermissionError': PermissionError,\n",
-       "  'ProcessLookupError': ProcessLookupError,\n",
-       "  'TimeoutError': TimeoutError,\n",
-       "  'open': <function io.open(file, mode='r', buffering=-1, encoding=None, errors=None, newline=None, closefd=True, opener=None)>,\n",
-       "  'copyright': Copyright (c) 2001-2020 Python Software Foundation.\n",
-       "  All Rights Reserved.\n",
-       "  \n",
-       "  Copyright (c) 2000 BeOpen.com.\n",
-       "  All Rights Reserved.\n",
-       "  \n",
-       "  Copyright (c) 1995-2001 Corporation for National Research Initiatives.\n",
-       "  All Rights Reserved.\n",
-       "  \n",
-       "  Copyright (c) 1991-1995 Stichting Mathematisch Centrum, Amsterdam.\n",
-       "  All Rights Reserved.,\n",
-       "  'credits':     Thanks to CWI, CNRI, BeOpen.com, Zope Corporation and a cast of thousands\n",
-       "      for supporting Python development.  See www.python.org for more information.,\n",
-       "  'license': See https://www.python.org/psf/license/,\n",
-       "  'help': Type help() for interactive help, or help(object) for help about object.,\n",
-       "  '__IPYTHON__': True,\n",
-       "  'display': <function IPython.core.display.display(*objs, include=None, exclude=None, metadata=None, transient=None, display_id=None, **kwargs)>,\n",
-       "  'get_ipython': <bound method InteractiveShell.get_ipython of <ipykernel.zmqshell.ZMQInteractiveShell object at 0x000001C664E56E08>>},\n",
-       " 'os': <module 'os' from 'C:\\\\Users\\\\hl27538\\\\.conda\\\\envs\\\\isxenv\\\\lib\\\\os.py'>,\n",
-       " 'isx': <module 'isx' from 'C:\\\\Program Files\\\\Inscopix\\\\Data Processing\\\\isx\\\\__init__.py'>,\n",
-       " 'main': <function isx.examples.cnmfe.main()>}"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "isx.examples.cnmfe.__dict__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import isx.cnmfe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function run_cnmfe in module isx.cnmfe:\n",
-      "\n",
-      "run_cnmfe(input_movie_files, output_cell_set_files, output_events_files, num_processes=1, overwrite_tiff=False, K=20, rf=[25, 25], stride=6, gSiz=13, gSig=5, min_pnr=5, min_corr=0.8, ssub_B=1, min_SNR=5, rval_thr=0.85, decay_time=0.4, event_threshold=0.025, merge_threshold=0.8, output_dir=None)\n",
-      "    Run the CaImAn CNMFe algorithm on an input movie file.\n",
-      "    \n",
-      "    Arguments\n",
-      "    ---------\n",
-      "    input_movie_files : list<str>\n",
-      "        Path to an .isxd movie file, or a list of paths to .isxd movie files that are a part of a Series.\n",
-      "    output_cell_set_files : list<str>\n",
-      "        The path to a cell set .isxd file that will be written with the identified traces and footprints, or if\n",
-      "        there are multiple input movie files, a list of output cell set file paths.\n",
-      "    output_events_files : list<str>\n",
-      "        The path to an events .isxd file that will be written with the deconvolved spikes of each neuron, or if there\n",
-      "        are multiple input movie files, a list of output event file paths.\n",
-      "    num_processes : int\n",
-      "        The number of processes to run in parallel. The more parallel processes, the more memory that is used.\n",
-      "    overwite_tiff : bool\n",
-      "        If the tiff file already exists, delete it and create a new one if True.\n",
-      "    rf : array-like\n",
-      "        An array [half-width, half-height] that specifies the size of a patch.\n",
-      "    stride : int\n",
-      "        The amount of overlap in pixels between patches.\n",
-      "    K : int\n",
-      "        The maximum number of cells per patch.\n",
-      "    gSiz : int\n",
-      "        The expected diameter of a neuron in pixels.\n",
-      "    gSig : int\n",
-      "        The standard deviation a high pass Gaussian filter applied to the movie prior to seed pixel search, roughly\n",
-      "        equal to the half-size of the neuron in pixels.\n",
-      "    min_pnr : float\n",
-      "        The minimum peak-to-noise ratio that is taken into account when searching for seed pixels.\n",
-      "    min_corr : float\n",
-      "        The minimum pixel correlation that is taken into account when searching for seed pixels.\n",
-      "    min_SNR : float\n",
-      "        Cells with an signal-to-noise (SNR) less than this are rejected.\n",
-      "    rval_thr : float\n",
-      "        Cells with a spatial correlation of greater than this are accepted.\n",
-      "    decay_time : float\n",
-      "        The expected decay time of a calcium event in seconds.\n",
-      "    ssub_B : int\n",
-      "        The spatial downsampling factor used on the background term.\n",
-      "    event_threshold : float\n",
-      "        Spikes with an amplitude of less than this are not written to the events file.\n",
-      "    merge_threshold : float\n",
-      "        Cells that are spatially close with a temporal correlation of greater than merge_threshold are automatically merged.\n",
-      "    output_dir : str\n",
-      "        Directory that .yaml, .tiff and .mmap files are written to. Defaults to movie directory.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(isx.cnmfe.run_cnmfe)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -532,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
